Bug overflow fixed on mobile #2

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,12 @@
+footer{
+
+    width:100vw;
+}
 .footer{
     background:#395A5F;
     padding:30px 0px;
     text-align:center;
-    width:100%;
+
     border-top-left-radius: .7rem;
     border-top-right-radius: .7rem;
 
